# reflexion-graph

./: README.md  main.py  makefile  pyproject.toml
src/chains/: formatter.py  responder.py  reviewer.py
src/graph/: graph.py  save.py
src/model/: formatter.py  reflection.py  responder.py
src/nodes/: __init__.py  formatter.py  has_tools.py  responder.py  reviewer.py  should_continue.py
src/prompt_templates/: formatter.py  responder.py  reviewer.py
src/state/: state.py
src/tools/: tools.py
