[project]
name = "reflexion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "pydantic>=2.12.0",
]
